crates/compiler/tests/parse_errors/if_indent.elm
module Main exposing (..)

x =
    if True then 1
